--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,8 @@
 </head>
 
 <body>
-    <div id="containter">
-        <h1>Header</h1>
-        <form>
-            <div class="result">
-            </div>
-        </form>
+    <div id="result">
+        
     </div>
     <script src="./index.ts"></script>
 </body>
